--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,15 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+.img{
+  margin-right: 10px;
+}
+
+.country-list{
+  list-style: none;
+}
+
+.item{
+  display: flex;
+  align-items: center;
+}
